--- a/Batch_Processor_dialog_base.ui
+++ b/Batch_Processor_dialog_base.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>401</width>
-    <height>429</height>
+    <height>410</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -23,7 +23,7 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>400</y>
+     <y>380</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -36,7 +36,7 @@
    <property name="geometry">
     <rect>
      <x>310</x>
-     <y>400</y>
+     <y>380</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -51,7 +51,7 @@
      <x>10</x>
      <y>10</y>
      <width>381</width>
-     <height>371</height>
+     <height>360</height>
     </rect>
    </property>
    <property name="title">
@@ -178,18 +178,18 @@
       <x>10</x>
       <y>180</y>
       <width>361</width>
-      <height>81</height>
+      <height>120</height>
      </rect>
     </property>
     <property name="title">
-     <string/>
+     <string>Stream</string>
     </property>
     <widget class="QLineEdit" name="txtCellValue">
      <property name="geometry">
       <rect>
        <x>130</x>
-       <y>50</y>
-       <width>113</width>
+       <y>20</y>
+       <width>70</width>
        <height>20</height>
       </rect>
      </property>
@@ -198,33 +198,33 @@
      <property name="geometry">
       <rect>
        <x>14</x>
-       <y>50</y>
+       <y>20</y>
        <width>120</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
-      <string>Threshold Value : </string>
+      <string>Threashold Value : </string>
      </property>
     </widget>
     <widget class="QLabel" name="label_6">
      <property name="geometry">
       <rect>
-       <x>250</x>
-       <y>50</y>
-       <width>101</width>
+       <x>200</x>
+       <y>20</y>
+       <width>150</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
-      <string>(FA Cell Number)</string>
+      <string>(Flow accumulation value)</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="txtStream">
      <property name="geometry">
       <rect>
        <x>130</x>
-       <y>17</y>
+       <y>48</y>
        <width>220</width>
        <height>20</height>
       </rect>
@@ -233,54 +233,54 @@
     <widget class="QLabel" name="label_9">
      <property name="geometry">
       <rect>
-       <x>74</x>
-       <y>20</y>
-       <width>56</width>
+       <x>58</x>
+       <y>51</y>
+       <width>70</width>
        <height>12</height>
       </rect>
      </property>
      <property name="text">
-      <string>Stream : </string>
+      <string>Raster file : </string>
      </property>
     </widget>
-   </widget>
-   <widget class="QLineEdit" name="txtStreamVector">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>140</x>
-      <y>301</y>
-      <width>220</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="readOnly">
-     <bool>false</bool>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="chkStream">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>280</y>
-      <width>171</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Make Stream polyline : </string>
-    </property>
+    <widget class="QCheckBox" name="chkStream">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>17</x>
+       <y>79</y>
+       <width>110</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Make polyline : </string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtStreamVector">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>78</y>
+       <width>220</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="readOnly">
+      <bool>false</bool>
+     </property>
+    </widget>
    </widget>
    <widget class="QLineEdit" name="txtCatchment">
     <property name="geometry">
      <rect>
       <x>140</x>
-      <y>335</y>
+      <y>316</y>
       <width>220</width>
       <height>20</height>
      </rect>
@@ -290,7 +290,7 @@
     <property name="geometry">
      <rect>
       <x>63</x>
-      <y>339</y>
+      <y>320</y>
       <width>80</width>
       <height>12</height>
      </rect>
